# unclebruce

./: .gitignore  CMakeLists.txt  cameramanager.cpp  cameramanager.h  main.cpp  main.qml  motionmanager.cpp  motionmanager.h
hypersen_sdk/: LCF_BasicInterface.h  LCF_C_Demo.cpp  LCF_Demo_MultiConnect.cpp  LCF_ParameterDefine.h  LCF_UserInterface.cpp  LCF_UserInterface.h  hps_lcf_sdk.lib
zmotion_sdk/: Robot_5.cpp  Robot_5.h  Robot_5Dlg.cpp  Robot_5Dlg.h  StdAfx.cpp  StdAfx.h  Test_CycleUp.cpp  Test_CycleUp.h  Test_CycleUpDlg.cpp  Test_CycleUpDlg.h  resource.h  single_home.cpp  single_home.h  single_move_.cpp  single_move_.h  test_AutoUp.cpp  test_AutoUp.h  test_AutoUpDlg.cpp  test_AutoUpDlg.h  test_BusInit.cpp  test_BusInit.h  test_Cam.cpp  test_Cam.h  test_CamDlg.cpp  test_CamDlg.h  test_Pitchset.cpp  test_Pitchset.h  test_PitchsetDlg.cpp  test_PitchsetDlg.h  test_Pswitch.cpp  test_Pswitch.h  test_PswitchDlg.cpp  test_PswitchDlg.h  test_UserSub.cpp  test_UserSub.h  test_UserSubDlg.cpp  test_UserSubDlg.h  test_communication.cpp  test_communication.h  test_handmove.cpp  (+14 more)
